--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,14 +38,13 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.2.1'
     compile 'com.google.android.gms:play-services:10.2.1'
     compile 'com.google.firebase:firebase-messaging:9.0.0'
-    compile files('C:/Users/Ryan/Desktop/BH/build/GenAsync.1.2.jar')
-    compile files('C:/Users/Ryan/Desktop/BH/build/gson-2.6.2.jar')
-    compile files('C:/Users/Ryan/Desktop/BH/build/KGJsonConverter.jar')
-    compile 'com.github.amigold.fundapter:library:1.0'
     compile files('libs/GenAsync.1.2.jar')
     compile files('libs/gson-2.6.2.jar')
     compile files('libs/KGJsonConverter.jar')
-    compile files('libs/GenAsync.jar')
+    compile 'com.github.amigold.fundapter:library:1.0'
+    compile files('libs/gson-2.6.2.jar')
+    compile files('libs/GenAsync.1.2.jar')
+    compile files('libs/KGJsonConverter.jar')
 }
 
 apply plugin: 'com.google.gms.google-services'
