--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     compile files('libs/gson-2.6.2.jar')
     compile files('libs/GenAsync.1.2.jar')
     compile files('libs/KGJsonConverter.jar')
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
