--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,9 @@ dependencies {
     compile files('libs/GenAsync.1.2.jar')
     compile files('libs/KGJsonConverter.jar')
     compile 'com.squareup.picasso:picasso:2.5.2'
-
+    compile('com.mikepenz:materialdrawer:5.9.0@aar') {
+        transitive = true
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
